# testcode

./: .gitmodules  README.md  ab.txt  ab_o_append.txt  add.h  atoi_test.cpp  const.cpp  dup.c  epoll.cpp  find_if.cpp  friendclass.cpp  main.cpp  main2.cpp  make_pair.cpp  memarr.c  o_append_test.c  override.cpp  pro1.sh  process.sh  process_file.c  process_file2.c  readlink.cpp  readme  startoflist.c  strstr.c  strtok.c  test  test.cpp  test_file.c  test_syscall.c  testpthread.cpp  testread.cpp  thread_test.cpp  udp_connet.c  websocket.xml  xsxx.txt
ECDSA/: ECDSA.clw  ECDSA.h  ECDSA.ncb  ECDSA.plg  ECDSA.rc  ECDSADoc.h  ECDSAView.cpp  MINGWENDlg.cpp  MINGWENDlg.h  MainFrm.cpp  ModeDlg.h  TestDlg.cpp  WeiShuDlg.cpp  WeiShuDlg.h
Parell/: server.c
TestFunCode/: TestFunCode.sln
algorithm/: aes.cpp  aes_ctr.cpp  big_int.cc  hash.c  karatsuba.cc  karatsuba2.cc  max_plalindrome.cc  rbtee.c  words_count.cc  xsgl.cpp  xsxx.cpp
api/: getopt  getopt.c
asm/: asm.cc  base.c  codeseg01.c  codeseg01.s  int.c  int.s  stack  stack.c  stack.s
automake/: Makefile  emv.xml  main.cpp
basis/: 64bithtonll.cpp  Ringbuffer.cpp  add.cpp  aes.cpp  arrary.c  array_pointer.cpp  atexit.c  atoi_test.cpp  bigAndsmallEndian.c  codesegment.c  const.h  const2.cpp  core.430  do-while.cc  do-while.cpp  friendclass2.cpp  if-else.c  loopbuffer.c  malloc  max_plalindrome.cc  num_system.cc  num_system.txt  num_to_char.cc  num_to_char.txt  pcapfileparse.c  pointer.c  popen.cpp  pro2.sh  process_file2.c  qsort.cc  readlink.cpp  refArr.cpp  reverse_list2.cc  select_sort.cc  sigaction.cc  statictest.cpp  string.cc  string_count.cc  struct_asign.c  test_localtime_r.c  (+7 more)
cpubind/: process_bind_cpu.cpp  thread_bind_cpu.cpp
jsontest/mgr_netconf/: CMakeLists.txt  netconf_mgr.c  netconf_mgr.h
mk/: dup.c  (+1 more)
(+487 files in other folders)
